# training-board-test

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
