[package]
name = "SensorTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "time-driver-any",
    "stm32g070cb",
    "memory-x",
    "unstable-pac",
    "exti",
], path = "../embassy/embassy-stm32" }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
], path = "../embassy/embassy-executor" }
embassy-time = { version = "0.3.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
], path = "../embassy/embassy-time" }
defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"

[profile.release]
debug = 2
